[gd_scene load_steps=29 format=3 uid="uid://bv0hep3nj7s5i"]

[ext_resource type="Script" uid="uid://c0g32ne6d7lqq" path="res://Features/FightScene/Cassette/cassette.gd" id="1_sndn0"]
[ext_resource type="Texture2D" uid="uid://cvtclg7lpuej1" path="res://Images/cassette/cassette front/1 label.png" id="2_o2424"]
[ext_resource type="Texture2D" uid="uid://bri5abvba2nda" path="res://Images/cassette/cassette front/2 case c v2.png" id="3_fk2f7"]
[ext_resource type="Texture2D" uid="uid://1jexkvbes2ne" path="res://Images/cassette/cassette front/3 gears v2.png" id="4_dm7ik"]
[ext_resource type="FontFile" uid="uid://bf27d738cuys7" path="res://Font/RockSalt-Regular.ttf" id="5_ir5hr"]
[ext_resource type="Texture2D" uid="uid://bc66jvhfkucid" path="res://Images/cassette/cassette front/A side.png" id="6_mmpey"]
[ext_resource type="Texture2D" uid="uid://bxu4re1jrhh2j" path="res://Images/cassette/cassette side/case side v2.png" id="7_xm1pe"]
[ext_resource type="Texture2D" uid="uid://bd6fqsna3edu2" path="res://Images/cassette/cassette top/1 case top v2.png" id="8_6ahv7"]
[ext_resource type="Texture2D" uid="uid://dat1u8t86k05y" path="res://Images/cassette/cassette top/2 top label.png" id="9_17ljl"]
[ext_resource type="Texture2D" uid="uid://sv0sakk6sx8w" path="res://Images/cassette/cassette front/fuel.png" id="10_2suj0"]
[ext_resource type="FontFile" uid="uid://dtn7qee5h51x5" path="res://Font/atwriter.ttf" id="11_i25h6"]
[ext_resource type="Texture2D" uid="uid://vc3k7cuctp21" path="res://Images/action_icons/attack.png" id="12_74lal"]
[ext_resource type="Texture2D" uid="uid://dnbv1ykq1xen0" path="res://Images/action_icons/defence.png" id="13_u2054"]
[ext_resource type="Texture2D" uid="uid://c64671rylr8jv" path="res://Images/action_icons/discard.png" id="14_ocsrf"]
[ext_resource type="Texture2D" uid="uid://dhpj5ddbsg5d5" path="res://Images/CardsPremade/wife/whatever_b_side.png" id="15_o2424"]
[ext_resource type="Texture2D" uid="uid://d2jiuwd0gc6pj" path="res://Images/cassette/cassette front/flip cassette tooltip.png" id="16_bm5ih"]
[ext_resource type="PackedScene" uid="uid://be8fqjriwju25" path="res://Features/FightScene/Cassette/ActionValue.tscn" id="16_fk2f7"]
[ext_resource type="Texture2D" uid="uid://b5wweb8xro7yh" path="res://Images/Dashboard/empty tooltip.png" id="18_fk2f7"]

[sub_resource type="FontVariation" id="FontVariation_avwf4"]
base_font = ExtResource("5_ir5hr")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_dm7ik"]
texture = ExtResource("18_fk2f7")
texture_margin_left = 62.0921
texture_margin_top = 52.1574
texture_margin_right = 51.8182
texture_margin_bottom = 56.3637
region_rect = Rect2(44, 409, 936, 206)

[sub_resource type="Animation" id="Animation_5rfmn"]
resource_name = "Cassette_vanish"
length = 0.3
step = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_6jk51"]
resource_name = "Hover_over"
length = 0.1
step = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -320)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprites/ActionData:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.09, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprites:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.5, 1.5)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("FlipTooltip:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-435.714, -95), Vector2(-596, -485)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = false
tracks/4/path = NodePath("FlipTooltip:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.0992162, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, false, true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("ActionTooltip:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(244.286, -140), Vector2(392.857, -528.572)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = false
tracks/6/path = NodePath("ActionTooltip:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.0992273, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, false, true]
}

[sub_resource type="Animation" id="Animation_bdam2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites/Top:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprites/Top:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprites/Front:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprites/Front:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprites/ActionData:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Sprites:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("FlipTooltip:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-390, -95)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = false
tracks/7/path = NodePath("FlipTooltip:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Sprites:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Sprites:modulate")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("Area2D/CollisionShape2D:shape:size")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(442, 563.333)]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("Area2D/CollisionShape2D:position")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -640)]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("Sprites/Front/Gears:scale")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-1, 1)]
}
tracks/13/type = "value"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("ActionTooltip:position")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(244.286, -140)]
}
tracks/14/type = "value"
tracks/14/imported = false
tracks/14/enabled = false
tracks/14/path = NodePath("ActionTooltip:visible")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_1rwco"]
resource_name = "SwitchToFront"
length = 0.2
step = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites/Top:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -139)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprites/Top:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 1e-05)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprites/Front:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1e-05), Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprites/Front:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 20), Vector2(0, 0)]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = false
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.001, 0.2),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"print_start_animation"
}, {
"args": [],
"method": &"print_end_animation"
}]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Area2D/CollisionShape2D:shape:size")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(442, 353.333), Vector2(442, 563.333)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Area2D/CollisionShape2D:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 0), Vector2(0, -640)]
}

[sub_resource type="Animation" id="Animation_75skt"]
resource_name = "SwitchToOtherSide"
length = 0.3
step = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites/Front:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.149, 0.15, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(20, 0), Vector2(-20, 0), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprites/Front:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.149, 0.15, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0, 1), Vector2(0, 1), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprites/Side:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-223, 0), Vector2(0, 3), Vector2(223, 3)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprites/Side:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3),
"transitions": PackedFloat32Array(0.840896, 1, 1.51572),
"update": 0,
"values": [Vector2(0, 1), Vector2(1, 1), Vector2(0, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprites/Front/Gears:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.149, 0.15),
"transitions": PackedFloat32Array(1, 1, 1e-05),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 1), Vector2(-1, 1)]
}
tracks/5/type = "method"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.15),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"update_elements"
}]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Sprites/ActionData:visible")
tracks/6/interp = 2
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.298101, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [false, false, true]
}

[sub_resource type="Animation" id="Animation_sagpx"]
resource_name = "SwitchToTopSide"
length = 0.2
step = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites/Top:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -139), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprites/Top:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 0), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprites/Front:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 20)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprites/Front:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_o46m7"]
_data = {
&"Cassette_vanish": SubResource("Animation_5rfmn"),
&"Hover_over": SubResource("Animation_6jk51"),
&"RESET": SubResource("Animation_bdam2"),
&"SwitchToFront": SubResource("Animation_1rwco"),
&"SwitchToOtherSide": SubResource("Animation_75skt"),
&"SwitchToTopSide": SubResource("Animation_sagpx")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_axh4p"]
size = Vector2(442, 563.333)

[node name="Cassette" type="Node2D"]
scale = Vector2(0.7, 0.7)
script = ExtResource("1_sndn0")

[node name="Sprites" type="Node2D" parent="."]
light_mask = 524288
visibility_layer = 524288

[node name="Front" type="Node2D" parent="Sprites"]

[node name="Label" type="Sprite2D" parent="Sprites/Front"]
texture = ExtResource("2_o2424")

[node name="Frame" type="Sprite2D" parent="Sprites/Front"]
texture = ExtResource("3_fk2f7")

[node name="Gears" type="Sprite2D" parent="Sprites/Front"]
scale = Vector2(-1, 1)
texture = ExtResource("4_dm7ik")

[node name="CassetteName" type="Label" parent="Sprites/Front"]
offset_left = -166.0
offset_top = -125.0
offset_right = 119.0
offset_bottom = -52.9999
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_ir5hr")
theme_override_font_sizes/font_size = 26
text = "SUPA DORIFTO"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="SideLogo" type="Sprite2D" parent="Sprites/Front"]
light_mask = 524288
visibility_layer = 524288
position = Vector2(161, -90)
scale = Vector2(0.390625, 0.359375)
texture = ExtResource("6_mmpey")

[node name="Side" type="Node2D" parent="Sprites"]
visible = false
position = Vector2(-223, 0)
scale = Vector2(1e-05, 1)

[node name="Frame" type="Sprite2D" parent="Sprites/Side"]
texture = ExtResource("7_xm1pe")

[node name="Top" type="Node2D" parent="Sprites"]
scale = Vector2(1, 1e-05)

[node name="Frame" type="Sprite2D" parent="Sprites/Top"]
texture = ExtResource("8_6ahv7")

[node name="Label" type="Sprite2D" parent="Sprites/Top"]
texture = ExtResource("9_17ljl")

[node name="CassetteName" type="Label" parent="Sprites/Top"]
offset_left = -92.0
offset_top = -20.0
offset_right = 91.0
offset_bottom = 19.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = SubResource("FontVariation_avwf4")
theme_override_font_sizes/font_size = 16
text = "SUPA DORIFTO"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ActionData" type="Node2D" parent="Sprites"]
visible = false
light_mask = 262144
visibility_layer = 262144

[node name="Fuel" type="Sprite2D" parent="Sprites/ActionData"]
light_mask = 524288
visibility_layer = 524288
position = Vector2(-205, -95)
scale = Vector2(0.5, 0.5)
texture = ExtResource("10_2suj0")

[node name="Label" type="Label" parent="Sprites/ActionData/Fuel"]
light_mask = 524288
visibility_layer = 524288
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -128.0
offset_top = -128.0
offset_right = -128.0
offset_bottom = -128.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("11_i25h6")
theme_override_font_sizes/font_size = 140
text = "5"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Icon1" type="Node2D" parent="Sprites/ActionData"]
visible = false
light_mask = 524288
visibility_layer = 524288
position = Vector2(-205, 0)
scale = Vector2(0.5, 0.5)

[node name="Sprite" type="Sprite2D" parent="Sprites/ActionData/Icon1"]
texture = ExtResource("12_74lal")

[node name="Label" type="Label" parent="Sprites/ActionData/Icon1"]
light_mask = 524288
visibility_layer = 524288
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -30.0
offset_top = -85.0
offset_right = 36.0
offset_bottom = 86.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("11_i25h6")
theme_override_font_sizes/font_size = 140
text = "5"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Icon2" type="Node2D" parent="Sprites/ActionData"]
visible = false
light_mask = 524288
visibility_layer = 524288
position = Vector2(-205, 100)
scale = Vector2(0.5, 0.5)

[node name="Sprite" type="Sprite2D" parent="Sprites/ActionData/Icon2"]
texture = ExtResource("13_u2054")

[node name="Label" type="Label" parent="Sprites/ActionData/Icon2"]
light_mask = 524288
visibility_layer = 524288
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -30.0
offset_top = -85.0
offset_right = 36.0
offset_bottom = 86.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("11_i25h6")
theme_override_font_sizes/font_size = 140
text = "5"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AfterPlay" type="Sprite2D" parent="Sprites/ActionData"]
light_mask = 524288
visibility_layer = 524288
position = Vector2(181.818, 98.1818)
scale = Vector2(0.75, 0.75)
texture = ExtResource("14_ocsrf")
metadata/_edit_use_anchors_ = true

[node name="Actions" type="Sprite2D" parent="Sprites/ActionData"]
position = Vector2(0, 30)
texture = ExtResource("15_o2424")

[node name="Label" parent="Sprites/ActionData/Actions" instance=ExtResource("16_fk2f7")]
offset_left = -46.0
offset_top = 22.0
offset_right = -128.0
offset_bottom = 19.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.3, 0.3)
size_flags_horizontal = 3
size_flags_vertical = 3
text = "1"

[node name="Label2" parent="Sprites/ActionData/Actions" instance=ExtResource("16_fk2f7")]
offset_left = 68.0
offset_top = 22.0
offset_right = -14.0
offset_bottom = 19.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.3, 0.3)
size_flags_horizontal = 3
size_flags_vertical = 3
text = "1"

[node name="FlipTooltip" type="Sprite2D" parent="."]
visible = false
position = Vector2(-390, -95)
scale = Vector2(0.4, 0.4)
texture = ExtResource("16_bm5ih")

[node name="ActionTooltip" type="Button" parent="."]
visible = false
offset_left = 244.286
offset_top = -140.0
offset_right = 1076.29
offset_bottom = 541.0
scale = Vector2(0.4, 0.404577)
theme_override_styles/focus = SubResource("StyleBoxTexture_dm7ik")
theme_override_styles/disabled = SubResource("StyleBoxTexture_dm7ik")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_dm7ik")
theme_override_styles/hover = SubResource("StyleBoxTexture_dm7ik")
theme_override_styles/pressed = SubResource("StyleBoxTexture_dm7ik")
theme_override_styles/normal = SubResource("StyleBoxTexture_dm7ik")

[node name="RichTextLabel" type="RichTextLabel" parent="ActionTooltip"]
layout_mode = 0
offset_left = 54.0
offset_top = 49.0
offset_right = 786.0
offset_bottom = 632.0
theme_override_fonts/normal_font = ExtResource("11_i25h6")
theme_override_font_sizes/normal_font_size = 72
text = "Lorem Ipsum Textum Examplum"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_o46m7")
}

[node name="Area2D" type="Area2D" parent="."]
scale = Vector2(1, 0.15)
priority = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -640)
shape = SubResource("RectangleShape2D_axh4p")
one_way_collision_margin = 3.0

[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
